--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -86,13 +86,14 @@
       margin: auto;
       width: auto;
 
-      a {
+      #footer-links {
         position: relative;
-        top: 0.3em;
-        color: #c8d7e3;
-        font-size: 1em;
-        text-decoration: none;
-        text-shadow: 0px -1px 0px #171b3e;
+        bottom: -0.3em;
+        margin: 0;
+      }
+
+      #footer-logos {
+        display: none;
       }
     }
   }
